force-app/main/default/objects/Opportunity/fields/GrandTotal_All_Orders__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_All_Orders__c</fullName>
    <defaultValue>0</defaultValue>
    <label>GrandTotal All Orders</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>