force-app/main/default/objects/Opportunity/fields/GrandTotal_Approved__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_Approved__c</fullName>
    <label>GrandTotal (Approved)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>