force-app/main/default/objects/Opportunity/fields/GrandTotal_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>GrandTotal_Invoiced__c</fullName>
    <label>GrandTotal (Invoiced)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>